# howdy

./: .clang-tidy  .gitignore  .travis.yml  README.md  autocomplete.sh  cli.py  compair.py  compare.py  config.ini  config_template.py  installer.py  learn.py  meson.build  meson.options  meson_options.txt  pam.py  uninstall.py  utils.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yml
archlinux/: .SRCINFO  PKGBUILD
archlinux/howdy/: .SRCINFO  PKGBUILD
archlinux/pam-python/: .SRCINFO  PKGBUILD
autocomplete/: howdy
cli/: __init__.py  add.py  clear.py  help.py  list.py  remove.py  test.py
debian/: changelog  control  howdy.1  howdy.manpages  install  postinst  preinst  prerm  rules
debian/source/: options
fedora/: howdy.spec
howdy-gtk/: authsticky.py  meson.build
howdy-gtk/debian/: changelog  control  copyright  howdy-gtk.links  howdy-gtk.lintian-overrides  install  postinst
howdy-gtk/debian/source/: options
howdy-gtk/src/: authsticky.py  i18n.py  init.py  main.glade  onboarding.glade  onboarding.py  paths.py.in  paths_factory.py  tab_models.py  tab_video.py  ui.glade  window.py  window_tab_models.py
howdy-gtk/src/polkit/: com.github.boltgolt.howdy-gtk.policy.in
howdy/archlinux/: .gitignore
howdy/archlinux/howdy/: .SRCINFO  .gitignore  PKGBUILD  howdy.install
howdy/debian/: changelog  control  copyright  howdy.lintian-overrides  howdy.manpages  install  postinst  preinst  prerm  rules
howdy/debian/source/: options
howdy/fedora/: com.github.boltgolt.howdy.policy  howdy.spec
howdy/src/: GSTREAMER_INTEGRATION.md  cli.py  compare.py  config.ini  i18n.py  meson.build  meson.options  pam.py  paths.py  paths.py.in  paths_factory.py  snapshot.py
howdy/src/autocomplete/: howdy  howdy.in
howdy/src/cli/: add.py  clear.py  config.py  disable.py  list.py  remove.py  set.py  snap.py  test.py
howdy/src/dlib-data/: .gitignore  Readme.md  install.sh
howdy/src/pam/: .clang-tidy  .gitignore  README.md  enter_device.cc  enter_device.hh  main.cc  main.hh  meson.build  optional_task.hh  paths.hh.in
howdy/src/pam-config/: howdy  howdy.in
howdy/src/pam/po/: meson.build
howdy/src/pam/subprojects/: inih.wrap
howdy/src/recorders/: ffmpeg_reader.py  pyv4l2_reader.py  video_capture.py
howdy/src/rubberstamps/: __init__.py  hotkey.py  nod.py
howdy/src/shell/: howdy.csh  howdy.sh
opensuse/: howdy.spec
src/: cli.py  compare.py  config.ini  ffmpeg_reader.py  pam.py  pyv4l2_reader.py  snapshot.py
src/cli/: add.py  clear.py  config.py  disable.py  list.py  remove.py  set.py  snap.py  test.py
src/dlib-data/: Readme.md  install.sh
src/pam/: .clang-tidy  .gitignore  README.md  enter_device.cc  enter_device.hh  main.cc  main.hh  meson.build  optional_task.hh
src/pam/po/: POTFILES
src/pam/subprojects/: inih.wrap
src/recorders/: ffmpeg_reader.py  ir_camera.py  pyv4l2_reader.py  v4l2.py  video_capture.py
src/rubberstamps/: __init__.py  hotkey.py  nod.py
tests/: compare.sh  importing.sh  pam.sh  passthrough.sh
tests/video/: match1.m4v  match2.m4v  noMatch.m4v
